tests/baselines/reference/interfacedeclWithPredicatesError14.errors.txt
tests/cases/compiler/interfacedeclWithPredicatesError14.ts(13,11): error TS2430: Interface 'UsersShow2' incorrectly extends interface 'UsersShow'.
  Invalid assignment of type UsersShow2 tot type UsersShow. Check if predicates are correct
tests/cases/compiler/interfacedeclWithPredicatesError14.ts(13,11): error TS95024: Predicates of interface 'UsersShow2' have to be satisfiable


==== tests/cases/compiler/interfacedeclWithPredicatesError14.ts (2 errors) ====
    
    interface UsersShow{
        user_id?: number;
        screen_name?: string;
        text?: string;
    } with {
        present(text);
        or(and(present(user_id), not(present(screen_name))),
            and(present(screen_name), not(present(user_id))));
    
    }
    
    interface UsersShow2 extends UsersShow{
              ~~~~~~~~~~
!!! error TS2430: Interface 'UsersShow2' incorrectly extends interface 'UsersShow'.
!!! error TS2430:   Invalid assignment of type UsersShow2 tot type UsersShow. Check if predicates are correct
              ~~~~~~~~~~
!!! error TS95024: Predicates of interface 'UsersShow2' have to be satisfiable
        //... inherit everything
    } with {
        present(screen_name);
        present(user_id);
    }